--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.0",
     "react-images-upload": "^1.2.8",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
