--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,6 +6,7 @@
     "@onflow/fcl": "^0.0.77",
     "bulma": "0.9.3",
     "cookies-js": "^1.2.3",
+    "graphql-hooks": "^5.11.4",
     "lodash": "4.17.21",
     "prettier": "^2.0.5",
     "react": "^17.0.2",
