--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node chain.js",
+    "nft": "node nft.js",
     "test": "go main_test.go",
     "deploy": "node deploy.js"
   }
