fix contract paths for cross operating system use

--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node chain.js",
-    "nft": "node nft.js",
-    "test": "go main_test.go",
-    "deploy": "node deploy.js"
+    "test": "go main_test.go"
   }
 }
