--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "update-contracts": "node updateContractAddresses.js",
     "chain": "node chain.js",
     "nft": "node nft.js",
+    "fusd": "node fusd.js",
     "build": "yarn workspace @scaffold-flow/client build --max-old-space-size=12288",
     "start": "yarn workspace @scaffold-flow/client start",
     "test": "go main_test.go"
