--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fontsource/dm-mono": "^4.5.9",
+    "@fontsource/dm-sans": "^4.5.8",
     "@onflow/fcl": "^1.1.0",
     "bulma": "0.9.3",
     "cookies-js": "^1.2.3",
