VSL-120: Added datejs library and utilized it

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,7 @@
     "@onflow/fcl": "^1.1.0",
     "bulma": "0.9.3",
     "cookies-js": "^1.2.3",
+    "dayjs": "^1.11.5",
     "lodash": "4.17.21",
     "prettier": "^2.0.5",
     "react": "^17.0.2",
