--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -35,6 +35,12 @@
     "react/jsx-filename-extension": ["off"],
     "react/react-in-jsx-scope": ["off"],
     "react/prop-types": ["error", { "skipUndeclared": true }],
+    "react/no-multi-comp": [
+      2,
+      {
+        "ignoreStateless": true
+      }
+    ],
     "jsx-a11y/click-events-have-key-events": ["off"]
   },
   "ignorePatterns": ["build/**/*", "public/**/*", "src/flow/**/*"]
