--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,16 +28,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "yarn run eslint src/**/*.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write ."
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -52,6 +47,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.47.0"
   }
 }
