--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/eslint-plugin": "^7.19.1",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
     "@onflow/fcl": "^1.1.0",
@@ -29,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "lint": "yarn run eslint src/**/*.js",
-    "build": "react-scripts build",
+    "build": "react-scripts build DISABLE_ESLINT_PLUGIN=true",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write ."
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "eslint": "^8.23.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.26.0",
