--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -13,13 +13,20 @@
       }
     }
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 11,
-    "sourceType": "module"
+    "sourceType": "module",
+    "requireConfigFile": false,
+    "babelOptions": {
+      "parserOpts": {
+        "plugins": ["jsx"]
+      }
+    }
   },
-  "plugins": ["react"],
+  "plugins": ["react", "@babel"],
   "rules": {
-    "indent": "off",
+    "indent": ["off"],
     "prefer-const": ["error"],
     "quotes": ["off", "single"],
     "object-shorthand": ["error", "properties"],
@@ -33,6 +40,7 @@
       }
     ],
     "react/jsx-filename-extension": ["off"],
+    "react/jsx-indent": ["off"],
     "react/react-in-jsx-scope": ["off"],
     "react/prop-types": ["error", { "skipUndeclared": true }],
     "react/no-multi-comp": [
