disable trailing comma check since prettier handles it

--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -29,6 +29,7 @@
     "indent": ["off"],
     "prefer-const": ["error"],
     "quotes": ["off", "single"],
+    "comma-dangle": ["off"],
     "object-shorthand": ["error", "properties"],
     "object-curly-newline": [
       "error",
