--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "workspaces": {
     "packages": [
       "packages/*"
+    ],
+    "nohoist": [
+      "**/client/**"
     ]
   },
   "devDependencies": {
