--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
     "@onflow/fcl": "^1.1.0",
@@ -48,9 +47,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
+    "@babel/core": "^7.19.1",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/eslint-plugin": "^7.19.1",
-    "eslint": "^8.23.1",
+    "@babel/preset-react": "^7.18.6",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
