--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "lint": "yarn run eslint src/**/*.js",
-    "build": "react-scripts build DISABLE_ESLINT_PLUGIN=true",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write ."
