--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-flow/client",
+  "name": "@vessel/client",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "lint": "yarn run eslint src/**/*.js",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write ."
@@ -47,7 +47,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.23.1",
+    "@babel/core": "^7.19.1",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/eslint-plugin": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
