--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -30,18 +30,13 @@
     "prefer-const": ["error"],
     "quotes": ["off", "single"],
     "comma-dangle": ["off"],
+    "implicit-arrow-linebreak": ["off"],
+    "function-paren-newline": ["off"],
     "object-shorthand": ["error", "properties"],
-    "object-curly-newline": [
-      "error",
-      {
-        "ObjectExpression": "always",
-        "ObjectPattern": { "multiline": true },
-        "ImportDeclaration": "never",
-        "ExportDeclaration": { "multiline": true, "minProperties": 3 }
-      }
-    ],
+    "object-curly-newline": ["off"],
     "react/jsx-filename-extension": ["off"],
     "react/jsx-indent": ["off"],
+    "react/jsx-curly-newline": ["off"],
     "react/react-in-jsx-scope": ["off"],
     "react/prop-types": ["error", { "skipUndeclared": true }],
     "react/no-multi-comp": [
