--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,7 +21,7 @@
     "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
