--- a/packages/client/.prettierrc
+++ b/packages/client/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
-  "tabs": false,
+  "useTabs": false,
   "semi": true,
   "bracketSpacing": true,
   "importOrder": [
