--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
     "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
@@ -47,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/core": "^7.19.1",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/eslint-plugin": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "eslint-config-airbnb": "^18.2.1",
