--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,6 @@
     "cookies-js": "^1.2.3",
     "dayjs": "^1.11.5",
     "lodash": "4.17.21",
-    "prettier": "^2.0.5",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-datepicker": "^4.3.0",
@@ -51,11 +50,15 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/eslint-plugin": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "sass": "^1.47.0"
   }
 }
