--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,9 +6,14 @@
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
     "@onflow/fcl": "^1.1.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "bulma": "0.9.3",
     "cookies-js": "^1.2.3",
     "dayjs": "^1.11.5",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
@@ -23,7 +28,8 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +58,7 @@
     "@babel/preset-react": "^7.18.6",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
