--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -90,6 +90,10 @@
         // Lint with Type Information
         // https://github.com/typescript-eslint/typescript-eslint/blob/master/docs/getting-started/linting/TYPED_LINTING.md
         "project": "./tsconfig.json"
+      },
+      "rules": {
+        "react/require-default-props": "off",
+        "@typescript-eslint/comma-dangle": "off"
       }
     }
   ],
